# CIrcBot

./: CMakeLists.txt  README  main.cpp
include/: IrcBot.h  LinuxSockets.h  WindowsSockets.h
src/: IrcBot.cpp  LinuxSockets.cpp  WindowsSockets.cpp
